# gmail-inbox-bot

./: .autofix.yml  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  docker-compose.production.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-vps.yml
config/: jesus82c.yml  miguelgutierrezbarquin.yml
docs/: EMAIL_INTEGRATION_OPTIONS.md  MIGRATION_PLAN.md  PACTO_BUSINESS_RULES_REFERENCE.md  PACTO_SOURCE_CONTEXT.md
gmail_inbox_bot/: __init__.py  __main__.py  actions.py  admin_dashboard.py  admin_logs.py  app.py  attachment_archive.py  attachment_manifest.py  bot.py  calendar_client.py  calendar_reminders.py  classifier.py  config.py  gmail_client.py  ib_trades.py  llm_costs.py  logger.py  mail_client.py  mail_processing.py  metrics.py  notifications.py  sheets.py  telegram.py  telegram_logger.py
gmail_inbox_bot/prompts/: asociacion.txt  asociacion_responder.txt  clasificador_inbox.txt  (+3 more)
scripts/: download_attachments.py  get_refresh_token.py  migrate_archive_layout.py  supabase_create_table.sql  supabase_sql.py  trash_marked.py  vps_deploy.sh
templates/: calendar_reminder.html  signature.html
tests/: conftest.py  test_actions.py  test_app_scheduler.py  test_attachment_archive.py  test_attachment_manifest.py  test_attachment_migration.py  test_bot.py  test_calendar_client.py  test_calendar_reminders.py  test_classifier.py  test_config.py  test_download_attachments.py  test_forward_detection.py  test_gmail_client.py  test_ib_trades.py  test_metrics.py  test_notifications.py  test_pre_filters.py  test_sheets.py  test_strip_html.py  test_telegram.py  test_telegram_logger.py  test_trash_marked.py
(+4 files in other folders)
