[project]
name = "gmail-inbox-bot"
version = "0.1.0"
description = "Email automation bot built on Gmail API"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "google-api-python-client>=2.176.0",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "openai>=1.60.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "uvicorn>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gmail_inbox_bot"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]
